# bigquery-starter-python

./: README.md  pyproject.toml
data/: Superstore.xls
