[tool.poetry]
name = "bigq-practice"
version = "0.1.0"
description = "Practice Project for BigQuery"
authors = ["Dinesh Biswal"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.10.7"
python-dotenv = ">=0.21.0"
pandas = "^1.5.0"
tqdm = "^4.64.1"
numpy = "^1.23.4"
google-cloud-bigquery = "^3.3.5"
pandas-gbq = ">=0.17.9"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
jupyterlab = "^3.4.8"
jupyterlab-vim = "^0.15.1"
isort = "^5.10.1"
jupyterlab-night = ">=0.4.4"
jupyterlab-code-formatter = "^1.5.3"
jupyterlab-execute-time = "^2.1.0"
jupyterlab-widgets = ">=3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
